syntax = "proto3";

package proto;

option go_package = "user-service/gen/go";

import "google/api/annotations.proto";

service UserService {
  rpc HealthCheck (HealthCheckRequest) returns (HealthCheckResponse) {
    option (google.api.http) = {
      get: "/api/v1/users/health"
    };
  }
  
  rpc GetProfile (GetProfileRequest) returns (GetProfileResponse) {
    option (google.api.http) = {
      get: "/api/v1/users/profile"
    };
  }

  rpc UpdateProfile (UpdateProfileRequest) returns (UpdateProfileResponse) {
    option (google.api.http) = {
      put: "/api/v1/users/profile"
      body: "*"
    };
  }

  rpc GetUser (GetUserRequest) returns (GetUserResponse) {
    option (google.api.http) = {
      get: "/api/v1/users/{user_id}"
    };
  }

  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse) {
    option (google.api.http) = {
      get: "/api/v1/users"
    };
  }
}

message HealthCheckRequest {}
message HealthCheckResponse {
  string service = 1;
  string status = 2;
}

message GetProfileRequest {}

message GetProfileResponse {
  string user_id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  string phone = 5;
  string address = 6;
  string city = 7;
  string country = 8;
  string postal_code = 9;
  string created_at = 10;
  string updated_at = 11;
}

message UpdateProfileRequest {
  string first_name = 1;
  string last_name = 2;
  string phone = 3;
  string address = 4;
  string city = 5;
  string country = 6;
  string postal_code = 7;
}

message UpdateProfileResponse {
  string message = 1;
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  string user_id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  string phone = 5;
  string address = 6;
  string city = 7;
  string country = 8;
  string postal_code = 9;
  string created_at = 10;
  string updated_at = 11;
}

message ListUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListUsersResponse {
  repeated UserInfo users = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message UserInfo {
  string user_id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  string phone = 5;
  string created_at = 6;
}

